# self-study_project

./: .gitignore  README.md  managers_fixture.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
materials/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_remove_lesson_video.py  0003_remove_answer_test_answer_question.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py  0002_remove_customuser_creator.py  0003_customuser_username.py
