[tool.poetry]
name = "self-study-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}
dotenv = "^0.9.9"
django-cors-headers = "^4.9.0"
pillow = "^11.3.0"
drf-yasg = "^1.21.10"
flake8 = "^7.3.0"
djangorestframework-simplejwt = "^5.5.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
